propogation overlap fix

--- a/client/src/components/Settings.css
+++ b/client/src/components/Settings.css
@@ -10,6 +10,9 @@
 }
 
 .settings {
+  position: absolute;
+  top: 2.5rem;
+  right: 0rem;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -85,11 +88,15 @@ input[type="range"] {
     top: 0.5rem;
     right: 0.5rem;
   }
+  .settings {
+    top: 6rem;
+    right: 0.5rem;
+  }
 }
 @media (max-width: 750px) {
   .settings-container {
     scale: 0.8;
-    top: 0rem;
-    right: -0.75rem;
+    top: 0.25rem;
+    right: 0.25rem;
   }
 }
