--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -169,10 +169,12 @@
   .name-input {
     font-size: 35px;
     height: 90px;
+    color: #d6ecff;
   }
   .dashboard-item {
     width: 90px;
     height: 90px;
+    color: #d6ecff;
   }
   .new-game {
     width: 90px;
@@ -192,11 +194,13 @@
   .name-input {
     font-size: 24px;
     height: 60px;
+    color: #d6ecff;
   }
   .dashboard-item {
     width: 60px;
     height: 60px;
     font-size: 12px;
+    color: #d6ecff;
   }
   .name-btn {
     font-size: 16px;
@@ -218,10 +222,16 @@
 @media (max-width: 480px) {
   .game-dashboard-top {
     top: 1rem;
+    position: fixed;
+    left: 0;
+    top: 1.5rem;
+    width: 100%;
+    z-index: 20;
   }
   .name-input {
     font-size: 16px;
     height: 45px;
+    color: #d6ecff;
   }
   .game-dashboard-side {
     top: 1rem;
@@ -231,6 +241,7 @@
     width: 45px;
     height: 45px;
     font-size: 10px;
+    color: #d6ecff;
   }
   .name-btn {
     font-size: 14px;
